--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,94 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+############################
+# Windows
+############################
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
 
-# testing
-/coverage
 
-# next.js
-/.next/
-/out/
+############################
+# Packages
+############################
 
-# production
-/build
+*.7z
+*.csv
+*.dat
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.seed
+*.so
+*.swo
+*.swp
+*.swn
+*.swm
+*.out
+*.pid
 
-# misc
-.DS_Store
-*.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+############################
+# Logs and databases
+############################
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.tmp
+*.log
+*.sql
+*.sqlite
+*.sqlite3
 
-# vercel
-.vercel
+
+############################
+# Misc.
+############################
+
+*#
+ssl
+.idea
+nbproject
+public/uploads/*
+!public/uploads/.gitkeep
+
+############################
+# Node.js
+############################
+
+lib-cov
+lcov.info
+pids
+logs
+results
+node_modules
+.node_history
+
+############################
+# Tests
+############################
+
+testApp
+coverage
+
+############################
+# Strapi
+############################
+
+.env
+license.txt
+exports
+*.cache
+build
+.strapi-updater.json
