--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "typescript-and-sass",
+  "name": "nextjs-ts-mui",
   "version": "0.1.0",
+  "description": "NextJs configured for TS and Material-Ui",
   "author": "brlaney",
   "license": "MIT",
   "private": true,
@@ -10,12 +11,28 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/node": "^14.14.41",
-    "@types/react": "^17.0.3",
-    "next": "10.1.3",
+    "@emotion/cache": "^11.4.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.0",
+    "@material-ui/icons": "^5.0.0-beta.0",
+    "@material-ui/styles": "^5.0.0-alpha.35",
+    "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.8",
-    "typescript": "^4.2.4"
+    "sass": "^1.35.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.0.0",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "eslint": "^7.29.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "typescript": "^4.3.5"
   }
 }
